--- a/FrameJMBT/frames/centro.html
+++ b/FrameJMBT/frames/centro.html
@@ -2,7 +2,7 @@
 <head>
 <title></title>
 </head>
-<body bgcolor="#FFF585">
+<body background="../imagenes/mid.jpg">
 <center>
 <h1>Contenido</h1>
 </center>
