--- a/FrameJMBT/frames/izq2.html
+++ b/FrameJMBT/frames/izq2.html
@@ -2,7 +2,7 @@
 <head>
 <title></title>
 </head>
-<body bgcolor="#E8D16D">
+<body background="../imagenes/menu.jpg">
 
 <h2>Menu Principal</h2>
 <ul>
