--- a/FrameJMBT/frames/abajo.html
+++ b/FrameJMBT/frames/abajo.html
@@ -2,7 +2,7 @@
 <head>
 <title></title>
 </head>
-<body bgcolor="#FFD878">
+<body background="../imagenes/bot.jpg">
 <center>
 <h2>contacto</h2>
 </center>
