--- a/FrameJMBT/frames/arriba.html
+++ b/FrameJMBT/frames/arriba.html
@@ -2,7 +2,7 @@
 <head>
 <title></title>
 </head>
-<body bgcolor="#E1E86D">
+<body background="../imagenes/top.jpg">
 <center>
 <h2>Pagina WEB</h2>
 </center>
